--- a/style.css
+++ b/style.css
@@ -1,8 +1,64 @@
-*{
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
-body.html{
+body,
+html {
   background: black;
+  color: white;
+}
+.nav-bar{
+  margin-right: 4%;
+  margin-left: 4%;
+  margin-top: 20px;
+}
+.logo {
+  font-size: 50px;
+  font-weight: 800;
+}
+.logo span {
+  color: #b0f127;
+}
+.nav-bar {
+  display: flex;
+  justify-content: space-between;
+}
+.nav-item {
+  display: flex;
+  gap: 30px;
+  text-decoration: none;
+  text-align: center;
+  align-items: center;
+}
+.nav-item li {
+  list-style: none;
+  text-decoration: none;
+}
+.nav-item li a{
+  list-style: none;
+  text-decoration: none;
+  color: white;
+  font-size: 25px;
+  border-bottom: #b0f127 solid 2px;
+  border-top: #b0f127 solid 2px;
+}
+.nav-item li a:hover{
+  border-bottom: #ffffff solid 2px;
+  border-top: #ffffff solid 2px;
+}
+nav .nav-btn{
+  padding: 20px 30px;
+  border-radius: 40px;
+  background: #b0f127;
+  color: rgb(0, 0, 0);
+  font-size: 18px;
+  font-weight: 600;
+}
+nav .nav-btn:hover{
+  background: #b1f127a6;
+}
+.hero-content{
+  display: flex;
+  justify-content: space-between;
 }
